# resume-optimizer

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  ats_prompt.txt  build_state.py  cover_letter_template.md  desirability_prompt.txt  dummy_gemini_output.json  example_certifications.csv  example_education.csv  example_experience.csv  example_profile.csv  generate.py  pyproject.toml  readme.md  requirements.txt  resume_template.md  system_prompt.txt  tune_template.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/resume_optimizer/: adapters.py  build_state.py  engine.py  generate.py  interfaces.py  logging_setup.py
tests/: test_build_state.py  test_generate.py  test_logging_setup.py  test_mock_resilience.py  test_pipeline.py
